# packet.net

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Packet.NET.slnx  README.md  SECURITY.md
c-spec/: CMakeLists.txt  README.md
c-spec/include/: ax25sdl.h
c-spec/src/: awaiting_connection.g.c  awaiting_release.g.c  awaiting_v22_connection.g.c  ax25sdl.g.h  connected.g.c  disconnected.g.c  subroutines.g.c
c-spec/test/: awaiting_connection.g.test.c  awaiting_release.g.test.c  awaiting_v22_connection.g.test.c  connected.g.test.c  disconnected.g.test.c  smoke.test.c
catalog/: apps.yaml
docker/: README.md  compose.interop.yml
docs/: app-catalog.md  app-extensibility.md  app-gateway.md  app-local-session-wire.md  app-packages.md  link-bench-plan.md  mcp-design.md  mcp-oauth-design.md  netrom-inp3-host-integration-design.md  netrom-inp3-i1-wire-spec.md  netrom-inp3-i2-design.md  netrom-inp3-i3-design.md  netrom-inp3-i4-design.md  netrom-inp3-interop.md  netrom-inp3-plan.md  network-access.md  nino-tnc-characterisation.md  node-api.yaml  node-self-update-design.md  observability.md  passkeys-lan-trust-pattern.md  plan.md  rhp2-server.md  runtime-capability-matrix.md  runtime-capability-strategy.md  sdl-primer.md  sdl-transcription-runbook.md  strict-vs-pragmatic-audit.md  whatspac-client-design.md
go-spec/: README.md  go.mod
guide/: 02-transports.md  07-netrom.md  index.md
json-spec/: .gitignore  README.md  awaiting_connection.g.json  awaiting_release.g.json  awaiting_v22_connection.g.json  connected.g.json  (+4 more)
(+955 files in other folders)
